syntax = "proto3";

package pb;
option go_package = "../pb";




// 心跳, gateway 通知游戏服，每2秒发送
message PingRequest {
}

// 心跳, gateway 通知游戏服，每2秒发送
message PingResponse {
    int32 code = 1;
    string msg = 2;
}

message CommonHead {
    string gameId = 1;
    string roomId = 2;
    string uid = 3;
    int64  sn = 4;
    int64  timestamp = 5;
    string protoName = 6;
}

message GameCommonRequest{
    CommonHead head = 1;
    bytes data = 2;
}


message GameCommonResponse{
    int32 code = 1;
    string msg = 2;
    CommonHead head = 3;
    bytes data = 6;
}


